2008-01-20  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>

	New hooks that allow the slime-presentations contrib to hook
	into the debugger and inspector.
	
	* slime.el (sldb-insert-frame-variable-value-function): New
	variable.
	(sldb-insert-frame-variable-value): New function, default value
	for sldb-insert-frame-variable-value-function.
	(sldb-insert-locals): Use it here.

	* slime.el (slime-inspector-insert-ispec-function): New variable.
	(slime-open-inspector): Use it here.

2008-01-20  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>

	* doc/slime.texi (Presentations): Improve documentation of
	presentations. 

2008-01-19  Geo Carncross  <geocar@gmail.com>

	* swank-ecl.lisp (inspect-for-emacs): Make ECL inspection better;
	should be able to handle all builtin types and CLOS objects now.

2008-01-17 Nikodemus Siivola <nikodemus@random-state.net>

	* swank-sbcl.lisp (sbcl-source-file-p): When a buffer is not
	associated with any file, M-. for names defined there ends up
	calling SBCL-SOURCE-FILE-P with NIL -- guard against that.

2008-01-14  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (sldb-mode): Add `sldb-quit' to `kill-buffer-hook' to
	close the debugging machinery on swank side when the SLDB buffer
	is killed. (Notice that killing the SLDB buffer manually will not
	restore window configuration in contrast to typing `q'.)
	
2008-01-10  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-delete-and-extract-region): New
	function. Portable version of `delete-and-extract-region' which
	returned NIL instead of "", as experienced by Matthias Koeppe.
	
2008-01-09  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>

	* slime.el (slime-repl-mode-map): Bind C-c C-t to
	slime-toggle-trace-fdefinition (as in Lisp buffers) instead of
	slime-repl-clear-buffer.  This binding is useful for untracing
	functions directly from the trace output.  Move
	slime-repl-clear-buffer to the keybinding C-c M-o. 
